--- a/index.html
+++ b/index.html
@@ -9,10 +9,7 @@
 </head>
 <body>
   <h3>Test 1.0</h3>
-<<<<<<< HEAD
-  <h4>This is master branch</h4>
-=======
   <h4>This is dev branch</h4>
->>>>>>> dev
+  <h5>This is fix branch</h5>
 </body>
 </html>
